Alastair S - Tue Mar 22 2005
	bluecube now in colour for the photo

Courtney Cavin - Thu Mar 17 2005
	backlight timer implemented
	max item length for scroller upped to 440px
	arrows now always show for submenu items
	moved Entertainment to Stuff

Alastair S - Sun Mar 13 2005
	matrix now based on cmatrix algorithm, also ported to photo
	bluecube no longer has its own event loop

Courtney Cavin - Sun Mar 13 2005
	browser execution now uses absolute path

Djaconil -  Sun Mar 13 2005
	ported tuxchess to iPod

Prashant V - Sun Mar 13 2005
	patched itunesmenu to use new menu system

Alastair S - Fri Mar 11 2005
	cube photo-ised, hold also now pauses the spin

Courtney Cavin - Thu Mar 10 2005
	added a delayed keypress menu in the filebrowser, current options:
	 - Delete
	 - Open in viP (if viP is located in /bin/)

Courtney Cavin - Wed Mar 9 2005
	fix for menu xoring on the ipod photo using a revision check

Alastair S - Wed Mar 9 2005
	hw_version now delimits ipod revision as read from /proc/cpuinfo
	generation checks on recording/playback

Courtney Cavin - Wed Mar 9 2005
	event handler passes unparsed events to a 'default action' function
	timer now directs events to the corrent window
	menu refactored
	browser changed to new menu system

Fredrik Bergholtz - Sun Mar 6 2005
	steroids uses global screen_info and pz_get_gc, drawing buffered

Alastair S - Sat Mar 5 2005
	bluecube: mini-ised; global functions made static where needed
	ambiguously named globals renamed
	calendar no longer redraws everything when scrolling through

Alastair S - Thu Mar 3 2005
	added matrix, a matrix screen simulation

Alastair S - Tue Mar 1 2005
	calc and othello are now relative
	image viewer zoom global fix

Alastair S - Thu Feb 24 2005
	slider is now relative to screen size; is now grey also
	screen_info globalized
	allowed for global settings accross GCs

Alastair S - Sun Feb 21 2005
	calendar mini-ised and uses gridlines
	uses bitmaps for the numbers

Courtney Cavin - Fri Feb 14 2005